# scribe

./: README.md  pyproject.toml  scribe-gui.spec
pyinstaller_hooks/: runtime_hook.py
scripts/: install.bat  profile_vram.py  run_gui.bat  smoke_engine.py  smoke_formatter.py  smoke_test.py
src/scribe/: __init__.py  chunked_predictor.py  hardware.py
src/scribe/chunkers/: __init__.py  default.py
src/scribe/cli/: main.py
src/scribe/commands/: __init__.py  plugins.py
src/scribe/engines/: __init__.py  base.py  ocr.py  structure.py
src/scribe/formatters/: __init__.py  base.py  json_fmt.py  markdown.py  raw.py  registry.py  text.py
src/scribe/providers/: __init__.py  base.py  paddleocr.py
src/scribe/results/: __init__.py  base.py
src/scribe/ui/: launch.py  main_window.py
