[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribe"
version = "0.1.0"
description = "Pluggable OCR toolkit — scan, parse, format. 本地 / 云端双引擎 OCR 工具箱"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "scribe-frame>=0.1.0",
    "paddleocr[doc-parser]>=3.7.0",
    "typer>=0.15",
    "rich>=13",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.8",
    "opencv-python>=4.10",
]
dev = [
    "pytest>=8",
    "pyinstaller>=6",
]

[project.scripts]
scribe = "scribe.cli.main:main"
scribe-gui = "scribe.ui.launch:main"

[project.entry-points."scribe.providers"]
paddleocr = "scribe.providers.paddleocr:PaddleOCRProvider"

[project.entry-points."scribe.formatters"]
json = "scribe.formatters.json_fmt:JsonFormatter"
text = "scribe.formatters.text:TextFormatter"
markdown = "scribe.formatters.markdown:MarkdownFormatter"

[project.entry-points."scribe.chunkers"]
default = "scribe.chunkers.default:DefaultChunker"

[project.entry-points."scribe.commands"]
scan = "scribe.commands.plugins:ScanCommand"
parse = "scribe.commands.plugins:ParseCommand"
batch = "scribe.commands.plugins:BatchCommand"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
